--- a/1910.10688/JanasJanssenCuffaro-August2019.tex
+++ b/1910.10688/JanasJanssenCuffaro-August2019.tex
@@ -1,5 +1,4 @@
 \documentclass[12pt]{article}
-\usepackage{geometry} 
 \usepackage{amsmath,amssymb,bm}
 \usepackage{textcomp,gensymb}
 \usepackage{graphicx}
@@ -12,7 +11,6 @@
 \usepackage{gensymb}
 \usepackage{xfrac}
 
-\usepackage{mathptmx}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 
@@ -20,11 +18,51 @@
 % restart equation numbering after every section:
 \numberwithin{equation}{section}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
-% hidelinks removes surrounding boxes in ref links. breaklinks allows
-% line breaking for links. breakurl is specific to urls.
-\usepackage[hidelinks,breaklinks]{hyperref}
-\usepackage[hyphenbreaks]{breakurl}
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \def\bbar{{\mathchar'26\mkern-9mu b}}
 
@@ -472,7 +510,7 @@ consistently describe the use of itself. \emph{Nature Communications} 9: 3711.
 %under License No.\ A-281.
 
 \bibitem[Yule(1897)]{Yule 1896} Yule, G.\ U.\ (1897). On the significance of Bravais' formulae for regression, \&c., in the case of skew correlation. \emph{Proceedings of the Royal Society of London} 60: 477--489. 
-%(issues: 359Ð367). Udny Yule.
+%(issues: 359ï¿½367). Udny Yule.
 %In 1846 he published a paper on the statistical concept of correlation, and arrived at a definition of the correlation coefficient before Karl Pearson.
 %Stephen Mack Stigler. 
 
