--- a/1910.10688/Section2.5.tex
+++ b/1910.10688/Section2.5.tex
@@ -78,9 +78,9 @@ This argument, incidentally, reveals the limitations of the banana metaphor in t
 
 This second complication also provides a simple argument for why we should not expect to succeed, using only elementary quantum systems as our components, in building a device such as the Superquantum Entangler PR01 of \citet{Bub and Bub 2018} realizing the PR box with the correlation array in Figure \ref{CA-PRbox}. Recall that the cells along the diagonal of the correlation array for this PR box are different. Now one can easily imagine that tossing two coins initially facing heads and tossing two coins initially facing tails would give different results. But this cannot be true for the spin-components of spin-$\frac12$ particles in the singlet state. Suppose we measure the spin-in-the-$z$-direction of both particles with two Dubois magnets. Spherical symmetry requires that the statistics for this experiment do not change if we rotate both Dubois magnets to measure, say, spin-in-the-$x$-direction. Measurements on the singlet state of two spin-$\frac12$ particles can thus not be used to produce a PR box with the correlation array in Figure \ref{CA-PRbox}. We will see below that they also cannot be used to produce a PR box for the Mermin setup with a correlation array represented by the point $\chi_{ab} = \chi_{ac} = \chi_{bc} = -1$ in Figure \ref{elliptope-LQPslice}.
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
-   \includegraphics[width=5.5in]{CA-3set2out-non-signaling-halfangles.jpeg} 
+   \includegraphics[width=4.5in]{CA-3set2out-non-signaling-halfangles.jpeg} 
    \caption{Correlation array given by quantum mechanics for two parties, one using settings $\hat{a}$ and one using setting $\hat{b}$, to perform a measurement on two spin-$\frac12$ particles in the singlet state.}
    \label{CA-3set2out-non-signaling-halfangles}
 \end{figure}
@@ -210,9 +210,9 @@ Using Eq.\ (\ref{chi matrix}) to evaluate the determinant of $\det{\chi}$, we ca
 \label{QM14}
 \end{equation}
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
-   \includegraphics[width=5in]{elliptope.jpeg} 
+   \includegraphics[width=4.5in]{elliptope.jpeg} 
    \caption{Elliptope of triplets of anti-correlation coefficients $(\chi_{ab}, \chi_{ac}, \chi_{bc})$ allowed by quantum mechanics in our version of the Mermin setup.}
    \label{elliptope}
 \end{figure}
@@ -277,7 +277,7 @@ $$
 $$
 Citing \citet{Accardi and Fedullo 1982}, Bas \citet[pp.\ 120--121]{Van Fraassen 1991} states this same inequality in terms of probabilities rather than correlation coefficients, just as Mermin did with the Bell inequality (see Section \ref{1.4}, Eqs.\ (\ref{Pr opp Mermin})--(\ref{Pr opp general})).\label{Accardi Fedullo}}  
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
    \includegraphics[width=4.5in]{tetrahedron-angles.jpeg} 
    \caption{Tetrahedron of triplets of angles $(\varphi_{ab}, \varphi_{ac}, \varphi_{bc})$ allowed by quantum mechanics in our version of the Mermin setup.}
