--- a/1910.10688/Section2.6.tex
+++ b/1910.10688/Section2.6.tex
@@ -127,7 +127,7 @@ The minimum value of 0 is reached whenever
 \end{equation}
 This can only happen when the three unit vectors $(\vec{e}_a, \vec{e}_b, \vec{e}_c)$ are coplanar. Recall that the anti-correlation coefficients $(\chi_{ab}, \chi_{ac}, \chi_{bc})$ for our quantum banana peeling and tasting experiment can be written as inner products of the unit vectors in the corresponding peeling directions (see Eq.\ (\ref{gram matrix reprise})). As noted in the paragraph leading up to Eq.\ (\ref{QM15}) in Section \ref{1.5}, these vectors must be coplanar for values of $(\chi_{ab}, \chi_{ac}, \chi_{bc})$ on the surface of the elliptope. For the four vertices the elliptope shares with the tetrahedron (see Figure \ref{elliptope}), they are not just coplanar but collinear as illustrated in Table \ref{collinear peeling directions}.
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \begin{tabular}{|c||c|c|c||c|c|c|}
 \hline
@@ -293,7 +293,7 @@ which is just the CHSH-type inequality we found in Section \ref{1.4} (see Eq.\ (
 
 As illustrated by a simple example in \emph{Totally Random}, the speedup of a quantum computer comes from the ability to assign a truth value to a conjunction without having to assign a truth value to its conjuncts \citep[pp.\ 186--215]{Bub and Bub 2018}. Long before anybody was thinking about quantum computing, however, physicists had already run into a version of the conundrum encountered here and resolved by quantum mechanics. In their popular introductory textbook on quantum physics, \citet[p.\ 258]{Eisberg and Resnick 1985} highlight the peculiar behavior of angular momentum in quantum mechanics. That the wave function for a one-electron atom ``does not describe a state with a definite $x$ and $y$ component of orbital angular momentum,'' they note, ``is mysterious from the point of view of classical mechanics'' (and is equally mysterious for intrinsic or spin angular momentum). In quantum mechanics, they continue, this is required by the uncertainty principle. If the $z$-component has a definite value, the $x$- and $y$-components cannot have definite values.
  
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
    \includegraphics[width=2.6in]{Vector_model_of_orbital_angular_momentum.png} 
    \caption{Vector model of orbital angular momentum in the old quantum theory \citep[Wikimedia Commons; cf.][p.\ 258, Fig.\ 7-12]{Eisberg and Resnick 1985}. }
@@ -309,7 +309,7 @@ The quantum-mechanical treatment of angular momentum not only solved these probl
 
 We can find CHSH-type inequalities like the one in Eq.\ (\ref{CHSH reprise 2}) for raffles we will design in Section \ref{2.2} to simulate correlations found in measurements on pairs of entangled particles of spin $s  = 1, \sfrac32, 2, \sfrac52, \ldots$ in the singlet state. The spin in any direction (corresponding to the taste of a banana peeled in that peeling direction) will take on $2s \! + \! 1$ different values $m \hbar$, where $m = -s, -s+1, \ldots, s-1, s$ and $\hbar$ is Planck's constant divided by $2\pi$. We will analyze these quantum correlations in Section \ref{2.1}. 
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
    \includegraphics[width=2.5in]{diag-cell-sxs.jpeg} 
    \caption{Cell along the diagonal of a non-signaling correlation array with $2s+1$ outcomes per setting.}
@@ -386,7 +386,7 @@ Rather than discussing the geometry of correlations in the abstract, we use the 
 
 \begin{figure}[h!]
  \centering
-   \includegraphics[width=5in]{3M-balance.jpeg} 
+   \includegraphics[width=4.5in]{3M-balance.jpeg} 
    \caption{3$m$ balance: an elementary example of a correlation between three random variables $(X_a, X_b, X_c) \equiv (\Delta \ell_a, \Delta \ell_b, \Delta \ell_c)$ (with $| \Delta \ell_a | \le \delta_a$, $| \Delta \ell_b | \le \delta_b$ and $| \Delta \ell_c | \le \delta_c$).}
    %The values for the displacements $(\Delta \ell_a, \Delta \ell_b, \Delta \ell_c)$ from the points $(\ell_a, \ell_b,  \ell_c)$ are subject to the constraint that the torque coming from the three scale pans on the right (with masses $m_a$, $m_b$ and $m_c$) in them exactly cancels the opposing torque coming from the spring on the left, so that the beam remains horizontal as it is for $(\Delta \ell_a, \Delta \ell_b, \Delta \ell_c) = (0, 0, 0)$.
    \label{3M-balance}
