--- a/1910.10688/Section3.2-classical.tex
+++ b/1910.10688/Section3.2-classical.tex
@@ -14,16 +14,16 @@ f^{\mathrm{k}}\geq 0 \; (\mathrm{k} = \mathrm{i}, \mathrm{ii}, \mathrm{iii}, \ma
   \label{3-simplex}
 \end{equation}
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
-   \includegraphics[width=6in]{raffle-tickets-3set2out-i-thru-iv-row.jpeg} 
+   \includegraphics[width=4.5in]{raffle-tickets-3set2out-i-thru-iv-row.jpeg} 
    \caption{The four different raffle tickets for three settings and two outcomes (cf.\ Figure \ref{raffle-tickets-3set2out-i-thru-iv}).}
    \label{raffle-tickets-3set2out-i-thru-iv-row}
    \end{figure}
    
 As we observed in Section \ref{1.4} (see note \ref{dense}), the imagery of a basket with a mix of tickets restricts us to values for $f^{\mathrm{k}}$ that are rational numbers. We will continue to discuss our raffles in terms of baskets of tickets, but we do want to point out that with a simple change of imagery we can accommodate real values as well. Instead of  baskets with tickets, consider wheels of fortune such as those shown in Figure \ref{wheelsoffortune}. These wheels have pie charts printed on them showing the mix of tickets in a particular raffle, each ticket of type $(\mathrm{k})$ occurring with a fraction $f^{\mathrm{k}}$ in the raffle corresponding to a segment $f^{\mathrm{k}} \times 100\%$ of the pie chart. Instead of randomly drawing a ticket from a basket, we would spin the wheel of fortune and pick a ticket of the type the pointer points to when the wheel of fortune comes to rest.   
           
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
    \includegraphics[width=4.5in]{wheelsoffortune.jpeg} 
    \caption{Wheels of fortune for two raffles. The one on the left is for a raffle with a mix of $\sfrac13$ each of tickets of type (ii), (iii) and (iv) in Figure \ref{raffle-tickets-3set2out-i-thru-iv-row}. This is raffle (b) in Figure \ref{CA-3set2out-raffle-mix} in Section \ref{1.4}, our optimal simulation of the Mermin correlation array in Figure \ref{CA-3set2out-Mermin}. The one on the right is for a 75\%/25\% mix of the admissible raffles ($\alpha$) and ($\beta$) in Figure \ref{admissible-raffles-spin1} in Section \ref{2.2.2}.}
@@ -208,16 +208,16 @@ Having reviewed the case of spin-$\frac12$, we now move to new territory and con
 
 \begin{figure}[h!]
  \centering
-   \includegraphics[width=6in]{raffle-tickets-3set3out-i-xiv.jpeg} 
+   \includegraphics[width=4.5in]{raffle-tickets-3set3out-i-xiv.jpeg} 
    \caption{The fourteen different types of raffle tickets for three settings and three outcomes that are left once the condition is imposed that, when Alice and Bob use the same setting, they should find opposite results if the outcome is $+1$ or $-1$ but the same result if the outcome is $0$.}
    \label{raffle-tickets-3set3out-i-xiv}
 \end{figure}
 
 A generic raffle is some mix of these 14 ticket types. Geometrically this corresponds to a point in the 13D simplex, defined as the convex hull of the 14 points corresponding to the standard unit basis vectors in $\mathbb{R}^{14}$ (cf.\ Eqs.\ (\ref{3-simplex})--(\ref{expansion of vec f}), with the index k now running from i to xiv). The diagram in Figure \ref{flowchart} provides a flow chart for how to get from this simplex in $\mathbb{R}^{14}$ to a polyhedron in $\mathbb{R}^3$ characterizing the class of quantum correlations found in measurements on the singlet state of two spin-1 particles that can be simulated---albeit, as we will see, imperfectly---with these raffles. 
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
-   \includegraphics[width=5.5in]{flowchart.jpeg} 
+   \includegraphics[width=4.5in]{flowchart.jpeg} 
    \caption{Flow chart illustrating the construction of the polyhedron characterizing the set of correlations that (a) can be generated with raffles mixing tickets of types (i) through (xiv) in Figure \ref{raffle-tickets-3set3out-i-xiv} and (b) replicate key features of the quantum correlations for measurements on the singlet state of two spin-1 particles.}
    \label{flowchart}
    \end{figure}
@@ -227,16 +227,16 @@ steps we used the open-source mathematical software system SageMath.
 
 The tickets for the spin-1 case immediately reveal one key difference with the spin-$\frac12$ case that we already drew attention to in Section \ref{1.6}. Our raffle tickets can only have two outcomes for each setting. As soon as there are more than two possible outcomes (and for spin $s$ there are $2s + 1$), it is thus impossible for all outcomes to occur in equal proportion in a single-ticket raffle. Yet this is what Alice and Bob find if they use the same setting in the quantum experiment these raffles are supposed to simulate. In terms of probabilities, the problem is that for spins greater than $\sfrac12$, single-ticket raffles---while non-signaling by construction---do not give uniform marginals, whereas measurements on two particles of arbitrary spin entangled in the singlet state do (as we showed in Section \ref{2.1.4}). The correlation array in Figure \ref{CA-3set3out-raffle-vi} for a single-ticket raffle illustrates the problem. The array is non-signaling but the marginals take on three different values: $0$, $\sfrac12$ and $1$. The solution to this problem is to allow only mixed raffles that give uniform marginals. 
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
    \includegraphics[width=4in]{CA-3set3out-raffle-vi.jpeg} 
    \caption{Correlation array for a single-ticket raffle with tickets of type (vi) (see Figure \ref{raffle-tickets-3set3out-i-xiv}).}
    \label{CA-3set3out-raffle-vi}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
-   \includegraphics[width=5in]{admissible-raffles-spin1.jpeg} 
+   \includegraphics[width=4.5in]{admissible-raffles-spin1.jpeg} 
    \caption{Two mixed raffles giving uniform marginals: in ($\alpha$) $\sfrac23$ of the tickets are of type (i) and $\sfrac13$ is of type (xiv); ($\beta$) has $\sfrac13$ each of types (vi), (viii) and (xii).}
    \label{admissible-raffles-spin1}
 \end{figure}
@@ -266,7 +266,7 @@ is probably the easiest way to ensure uniform marginals. It uses tickets with th
 \end{equation}
 the outcomes for setting $\hat{a}$ are the same as those in raffle ($\alpha$) while the outcomes for settings $\hat{b}$ and $\hat{c}$ are permutations of those in raffle ($\alpha$). These permutations were chosen so as to make the sum $X_a + X_b + X_c$ vanish on both sides of all three tickets. As we saw in Section \ref{1.6}, this means that the (anti-)correlations produced by this raffle are represented by a point on the elliptope in Figure \ref{elliptope}. 
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
    \includegraphics[width=4in]{CA-3set3out-raffle-33vi33viii33xii.jpeg} 
    \caption{Correlation array for a raffle with equal numbers of tickets of types (vii), (viii) and (xii) (see Figure \ref{admissible-raffles-spin1}, ($\beta$)).}
@@ -372,7 +372,7 @@ M^{\mathrm{k}}_{ab} = - \frac32 \, \langle X^A_a X^B_b \rangle \Big|_{\vec{f}_{\
 and similar expressions with $ab$ replaced by $ac$ or $bc$. The covariances for single-ticket raffles on the right-hand side of these expressions are collected in Table \ref{covariances for spin 1}. 
 %It may look as if tickets for which all three covariances are zero (i.e., tickets of type (v), (xi), (xiii) and (xiv)) are irrelevant but they serve the purpose of ensuring uniform marginals in some admissible raffles. 
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \begin{tabular}{|c||c|c|c|}
 \hline
@@ -417,7 +417,7 @@ M = -\frac32
 \label{components of M spin 1}
 \end{equation}
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
    \includegraphics[width=4in]{polytope-spin1.jpeg} 
    \caption{Anti-correlation polyhedron for raffles simulating quantum correlations for spin-1 (cf.\ the classical tetrahedron in Figure \ref{tetrahedron}).}
@@ -492,9 +492,9 @@ If we do the same thing for setting $\hat{b}$, we get a second new raffle ($\bet
 
 The flow chart in Figure \ref{flowchart} that we used to deal with raffles for the spin-1 case will also guide us in our analysis of raffles for the spin-$\frac32$ case. The number of tickets now jumps from $(3^3 +1)/2 = 14$ to $4^3/2 = 32$. We will only display a subset of these tickets (see Figures \ref{raffles-spin32-tickets-mu} and \ref{raffles-spin32-tickets-nu}). We numbered them using the same convention as before (cf.\ the tree structure in Figure \ref{raffle-tickets-3set2out-i-thru-iv} in Section \ref{1.4}). With 32 tickets, the number of vertices and facets to keep track of is starting to get unwieldy but the spin-$\frac32$ case is still tractable. And there are at least two good reasons for examining it in some detail: it is the simplest case in which cell symmetry calls for separate admissibility conditions; it nicely illustrates the difference between integer and half-integer spin cases in terms of the bound on the sum of the anti-correlation coefficients $\chi_{ab} + \chi_{bc} + \chi_{ac}$ (see Section \ref{1.6}, Eqs.\ (\ref{De Finetti half integer s})--(\ref{Mermin CHSH integer spin})).
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
-   \includegraphics[width=5in]{symmetry-spin-1-32.jpeg} 
+   \includegraphics[width=4.5in]{symmetry-spin-1-32.jpeg} 
    \caption{Cell in the correlation arrays for the spin-1 and spin-$\frac32$ cases showing centrosymmetry.}
    \label{symmetry-spin-1-32}
 \end{figure}
@@ -551,7 +551,7 @@ The condition $\beta = \varepsilon$ translates into
 \end{equation}
 We need three such conditions, one for each of the three off-diagonal cells in the correlation array (recall that the cell symmetry and the symmetry of the correlation array as a whole guarantee that cells on opposite sides of the diagonal are the same). The probabilities in these admissibility conditions are given by half the sum of the ticket fractions $f^{\mathrm{k}}_{\mathrm{adm}}$ for those tickets that have the relevant combination of outcomes (cf.\ Eqs.\ (\ref{chi for f spin 1/2 b})--(\ref{chi for f spin 1/2 ba})). Like the conditions for uniform marginals, these symmetry conditions thus take the form of linear constraints on the ticket fractions $f^\mathrm{k}$ (with k now running from i through xxxii). 
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
    \includegraphics[width=3.5in]{SpinThreeHalfFace.png} 
    \caption{Facets of the anti-correlation polyhedron for spin-$\frac{3}{2}$. Imagine this figure `glued onto' the four facets of the classical tetrahedron in Figure \ref{tetrahedron}.}
@@ -569,9 +569,9 @@ where we used Eq.\ (\ref{SD for adm raffle 2}) to set $\sigma_{\sfrac32}^2 = \sf
 
 With a little help from the computer, we were able to construct raffles represented by these 9 vertices. Figures \ref{raffles-spin32-tickets-mu} and \ref{raffles-spin32-tickets-nu} show the mix of tickets for two of them, labeled ($\mu$) and ($\nu$). We obtain raffles represented by the other seven vertices by permutations of the outcomes for the three settings $\hat{a}$, $\hat{b}$ and $\hat{c}$ on all tickets in these two raffles (switching left and right sides of tickets if necessary). By changing the sign of the values for one of the settings on all tickets in these nine raffles (again switching sides of tickets if necessary), we can construct raffles for the 27 vertices obtained if the facets in Figure \ref{SpinThreeHalfFace} are ``glued on'' to the other three facets of the tetrahedron (this is the same procedure that we followed for the spin-1 case in Section \ref{2.2.2}).
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
-   \includegraphics[width=6in]{raffles-spin32-tickets-mu.jpeg} 
+   \includegraphics[width=4.5in]{raffles-spin32-tickets-mu.jpeg} 
    \caption{Admissible raffle ($\mu$) for the spin-$\frac32$ case with equal numbers of tickets of type (xii), (xv), (xxiv) and (xxx).}
     \label{raffles-spin32-tickets-mu}
 \end{figure}
@@ -621,7 +621,7 @@ M^{\mathrm{k}}_{ab} = -\frac{1}{\sigma_{s = \sfrac32}^2} \langle X^A_a X^B_b \ra
 \end{equation}
 and similar expressions with $ab$ replaced by $ac$ or $bc$ (cf.\ Eq.\ (\ref{M_ab^i spin-1})). These matrix elements are given by $- 1/\sigma_{s = \sfrac32}^2 = -\sfrac45$ times the relevant entries in Table \ref{covariances for spin 3/2 raffle mu}. 
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \begin{tabular}{|c||c|c|c|}
 \hline
@@ -669,9 +669,9 @@ which confirms that $\chi_{ab} + \chi_{ac} + \chi_{bc} =- \sfrac75$, as it shoul
 
 %Now consider a raffle ($\mu^\prime$) obtained by replacing all values for $\hat{a}$ on both sides of the four ticket types in raffle ($\mu$) by the values for $\hat{b}$, the values for $\hat{b}$ by those for $\hat{c}$ and the values for $\hat{c}$ by those for $\hat{a}$. The values for $(\chi_{ab}, \chi_{ac}, \chi_{bc})$ for this new raffle ($\mu^\prime$) will be given by the values for $(\chi_{bc}, \chi_{ba} = \chi_{ab}, \chi_{ca} = \chi_{ac})$ for raffle ($\mu$). Raffle ($\mu$) will thus be represented by the point $(0, -\sfrac{7}{10}, -\sfrac{7}{10})$ on the same plane as the point representing raffle ($\mu$). A similar permutation produces a raffle ($\mu^{\prime\prime}$) represented by the point $(-\sfrac{7}{10}, 0, -\sfrac{7}{10})$ on that plane.   
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
-   \includegraphics[width=5.5in]{raffles-spin32-tickets-nu.jpeg} 
+   \includegraphics[width=4.5in]{raffles-spin32-tickets-nu.jpeg} 
    \caption{Admissible raffle ($\nu$) for the spin-$\frac32$ case: a basket with equal numbers of tickets of type (viii), (xi), (xiv), (xx), (xxiii) and (xxix).}
     \label{raffles-spin32-tickets-nu}
 \end{figure}
@@ -683,7 +683,7 @@ Figure \ref{raffles-spin32-tickets-nu} shows the tickets for a raffle represente
 \end{equation}
 As with raffle ($\mu$), the outcomes of both sides of all tickets add up to $\pm \sfrac12$ and both sets of admissibility conditions (uniform marginals and cell symmetry) are met. These last two properties can be verified the same way as in the case of raffle ($\mu$). 
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \begin{tabular}{|c||c|c|c|}
 \hline
