--- a/1910.10688/Section3.2.4-classical.tex
+++ b/1910.10688/Section3.2.4-classical.tex
@@ -5,9 +5,9 @@
 
 To simulate the correlations found by measurements on a singlet state of two spin-2 particles, we use  tickets with five outcomes $\pm 2,\pm 1,0$. This results in 63 relevant ticket types, corresponding to a $62$-dimensional simplex of raffles. The conditions for uniform marginals and cell symmetry yield six linear constraints, yielding a 50-dimensional polytope of admissible raffles in 63-dimensional space. Unfortunately, the number of vertices determined by these conditions is daunting: If we consider only the six conditions for uniform marginals, computer calculation produce 553,664 vertices. This is already orders of magnitude larger than the vertex sets for the earlier polytopes. The full case, obtained by including the six conditions for cell symmetry, is presumably even larger but we have not been able to run the vertex enumeration algorithm to completion on a personal computer. Hence we do not know how many vertices the spin-$2$ admissible polytope has, much less the full list of such. This computational obstacle only grows worse as the spin increases, as is evident from the numbers in Figure \ref{numberoftickets}. The enumeration of basic admissible raffles thus becomes intractable for spin $s\geq 2$. As a consequence, the flowchart in Figure \ref{flowchart} comes to a halt and we cannot hope to compute the anti-correlation polyhedron in the way it depicts.
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
-   \includegraphics[width=5.5in]{numberoftickets.jpeg} 
+   \includegraphics[width=4.5in]{numberoftickets.jpeg} 
    \caption{Number of ticket types, admissibility conditions, and facet/vertex counts for polytopes and polyhedra up to spin-$\frac52$.}
       \label{numberoftickets}
 \end{figure}
@@ -19,7 +19,7 @@ With this notation in mind, consider the spin-$s$ raffle (with $2s+1$ outcomes $
 Thus for any spin there is an admissible raffle for which $\vec{\chi}=(1,1,1)$. The other three points then follow by symmetry: We take each ticket type and swap all outcomes for a given setting (e.g., take the outcomes for setting $\hat{a}$ to range from $-s$ to $+s$). This generates three more admissible raffles, characterized by $\vec{\chi}=(-1,-1,1)$, $(-1,1,-1)$, $(1,-1,-1),$ respectively. Hence all four vertices of the classical tetrahedron can be produced by admissible raffles regardless of the number of outcomes. By convexity, it follows that the anti-correlation polyhedron always includes the entire classical tetrahedron.
 
 In general, however, the classical tetrahedron is not the full polyhedron. To establish this, we again recall that the points $\vec{\chi}=(-1,-1,1)$, $(-1,1,-1)$, $(1,-1,-1)$ generate a facet of the classical tetrahedron. This would correspond to the Bell inequality $\chi_{ab}+\chi_{ac}+\chi_{bc}\geq -1$. But, as we have shown for spin $1$ through $\frac32$, there exist admissible raffles that violate this inequality. 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \begin{tabular}{|c|c|}
 \hline
@@ -64,7 +64,7 @@ $$f^1+f^2+f^3=f^2+f^4=f^3+\sfrac12 f^4=\sfrac15.$$ These four equations in three
 
 % Do not remove the curly brackets. Otherwise, Latex interprets [x] to be a dimension (e.g. [cm]) and will not compile properly.
 
-% \begin{table}[h]
+% \begin{table}[ht]
 % \centering
 % \begin{tabular}{|c|*{5}c|}
 %     \hline
@@ -100,9 +100,9 @@ we are led to consider tickets for which $(X_a^A+2X_b^A+2X_c^A)^2$ is small in o
 
 There are, however, several problems with this method. The first is that it is necessarily somewhat tedious: The linear relation to be minimized must be computed for each facet under consideration, and therefore will lead to different sets of tickets in each case. Second, it is not obvious how many tickets one will need to successfully produce admissible raffles. In the case of spin 2, there are 7 tickets for which this expression is zero and 9 for which it has magnitude 1; it turns out that we need to use tickets of both magnitudes to get an admissible raffle. This is still far smaller than the 63 ticket types total, but it is not nearly as attractive as the 10 tickets with outcomes summing to zero in the $\chi_{ab}+\chi_{ac}+\chi_{bc}$ case. Finally, and most importantly, our iterative strategy only needs one admissible raffle that maximally violates the relevant facet inequality. It is therefore altogether excessive to characterize the entire set of such admissible raffles for a given facet.
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
-   \includegraphics[width=5.5in]{FacetsSpin2Spin52.jpeg} 
+   \includegraphics[width=4.5in]{FacetsSpin2Spin52.jpeg} 
    \caption{Facet of polyhedron for (a) spin-$2$ and (b) spin-$\frac52$ (cf.\ Figure \ref{SpinThreeHalfFace}).}
    \label{FacetsSpin2Spin52}
 \end{figure}
@@ -113,9 +113,9 @@ Rather than pursue this approach further, we will instead exploit the well-known
 \end{equation}
 To maximally violate a particular facet inequality, then, is equivalent to minimizing this objective function over the set of $\vec{f}_{\mathrm{adm}}\in \Delta^{n-1}$ satisfying $B\vec{f}_{\mathrm{adm}}=\vec{b}$. The problem of finding such an admissible raffle therefore takes the form of a particular \emph{linear program},  and thus our iterative strategy requires the solution of a finite number of linear programs. Such linear programs can be solved via the so-called simplex method at relatively low computational cost. In this way, we implemented our iterative strategy in Mathematica and so obtain an algorithm to compute all vertices of the anti-correlation polyhedron. The resulting local polyhedra, in the case of spin-$2$ as well as spin-$\frac52$, appear in Figure \ref{FacetsSpin2Spin52}. As in Figure \ref{SpinThreeHalfFace}, this picture shows the facets we need to ``glue onto" each of the four facets of the classical tetrahedron to get the full polyhedron.
 
-\begin{figure}[h]
+\begin{figure}[ht]
  \centering
-   \includegraphics[width=5in]{polytopevolume.jpeg} 
+   \includegraphics[width=4.5in]{polytopevolume.jpeg} 
    \caption{Polytope volumes and minimal values of the sum of anti-correlation coefficients}
    \label{polytopevolume}
 \end{figure}
