--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-09-05 07:26:33 -0400 
+%% Created for Pete Su at 2023-09-06 11:48:57 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Janas2022,
+	author = {Michael Janas and Michael E. Cuffaro and Michel Janssen},
+	date-added = {2023-09-06 11:48:41 -0400},
+	date-modified = {2023-09-06 11:48:57 -0400},
+	doi = {10.1007/978-3-030-85939-8},
+	note = {\href{http://arxiv.org/abs/1910.10688v2}{arxiv:1910.10688}},
+	publisher = {Springer International Publishing},
+	title = {Understanding Quantum Raffles},
+	url = {https://doi.org/10.1007%2F978-3-030-85939-8},
+	year = 2022,
+	bdsk-url-1 = {https://doi.org/10.1007%2F978-3-030-85939-8},
+	bdsk-url-2 = {https://doi.org/10.1007/978-3-030-85939-8}}
+
+@article{Janas2019,
+	author = {Michael Janas and Michael E. Cuffaro and Michel Janssen},
+	date-added = {2023-09-06 11:48:10 -0400},
+	date-modified = {2023-09-06 11:48:12 -0400},
+	journal = {arXiv preprint},
+	note = {\href{http://arxiv.org/abs/1910.10688v2}{arxiv:1910.10688}},
+	title = {{Putting probabilities first. How Hilbert space generates and constrains them}},
+	year = {2019}}
 
 @article{Baez2023,
 	author = {Baez, John C},
