--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2023-09-06 11:48:57 -0400 
+%% Created for Pete Su at 2023-09-06 20:46:38 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Cuffaro2023,
+	author = {Cuffaro, Michael E},
+	date-added = {2023-09-06 20:46:07 -0400},
+	date-modified = {2023-09-06 20:46:38 -0400},
+	journal = {arXiv preprint},
+	note = {\href{https://arxiv.org/abs/2308.16371}{arXiv:2308.16371}},
+	title = {The Measurement Problem Is a Feature, Not a Bug--Schematising the Observer as a Postulate and the Quantum-Mechanical Concept of an Open System on an Informational, or (neo-) Bohrian, Approach},
+	year = {2023}}
 
 @book{Janas2022,
 	author = {Michael Janas and Michael E. Cuffaro and Michel Janssen},
