more upright fonts for euler files.

--- a/yoneda-speedrun/yoneda-speedrun-pal-eu.tex
+++ b/yoneda-speedrun/yoneda-speedrun-pal-eu.tex
@@ -26,6 +26,10 @@ menucolor=blue,linktocpage=true]{hyperref}
 \usepackage{tikz}
 \usepackage{tikz-cd}
 
+\input yoneda-mac
+\romantrue
+\input yoneda-cats
+
 \input yoneda-main
 
 \end{document}
