--- a/yoneda-speedrun/yoneda-speedrun.tex
+++ b/yoneda-speedrun/yoneda-speedrun.tex
@@ -24,6 +24,9 @@ menucolor=blue,linktocpage=true]{hyperref}
 \usepackage{tikz}
 \usepackage{tikz-cd}
 
+\input yoneda-mac
+\input yoneda-cats
+
 \input yoneda-main
 
 \end{document}
