--- a/yoneda-speedrun/yoneda-cats.tex
+++ b/yoneda-speedrun/yoneda-cats.tex
@@ -24,3 +24,4 @@
 \newcommand{\shortFun}{\setName{Fun}}
 \newcommand{\func}{\setName{Func}}
 \newcommand{\funct}{\setName{Funct}}
+\newcommand{\littleh}{{h}}
