--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -338,7 +338,7 @@ Check over this formula in your head, and note that there are {\it two} function
 applications (one for the functor, and one inside that for the post-composition arrow),
 and two different kinds of placeholders.
 
-Other notations for this functor include $\Hom(X, -)$, $\Hom_\CC(X, -)$, $\h^X$, ${\it h}^X$, and
+Other notations for this functor include $\Hom(X, -)$, $\Hom_\CC(X, -)$, $\h^X$, ${\littleh}^X$, and
 just plain $\CC(X,-)$. In my notation we should have written this as $\Arrows_{\CC}(X,
 -)$, but I'm lazy. This kind of functor is also called a {\it hom-functor}.
 
