--- a/1910.10688/Section2.5.tex
+++ b/1910.10688/Section2.5.tex
@@ -40,14 +40,14 @@ Upon inspection of Figure \ref{vectors}, one sees that\footnote{What makes the p
 \label{QM2}
 \end{equation}
 Inserting these expressions into Eq.\ (\ref{singlet state s=1/2 simple}), we arrive at
-\begin{eqnarray}
-|0, 0 \rangle_{12} & \! \!\! = \! \!\! & \frac{1}{\sqrt{2}} \Big\{ \! \left(  \cos{\! \left( \frac{\varphi_{ab}}{2} \right)}  |+ \rangle_{1b} - \sin{\! \left(  \frac{\varphi_{ab}}{2} \right)} |- \rangle_{1b} \! \right) 
-\!\! \left(  \sin{\! \left(  \frac{\varphi_{ab}}{2}  \right)} |+ \rangle_{2b} + \cos{\! \left(  \frac{\varphi_{ab}}{2} \right)} |- \rangle_{2b} \!  \right) 
- \nonumber \\[.3cm]
-  &  & \; - \left( \sin{\! \left(  \frac{\varphi_{ab}}{2}  \right)}  |+ \rangle_{1b} + \cos{\! \left(  \frac{\varphi_{ab}}{2}  \right)} |- \rangle_{1b} \right) 
- \!\! \left( \cos{\! \left(  \frac{\varphi_{ab}}{2}  \right)} |+ \rangle_{2b} - \sin{\! \left(  \frac{\varphi_{ab}}{2}  \right)} |- \rangle_{2b}  \right) \! \Big\}.  
+\begin{align}
+|0, 0 \rangle_{12} &= \frac{1}{\sqrt{2}} \Big\{ \! \left(  \cos{\! \left( \frac{\varphi_{ab}}{2} \right)}  |+ \rangle_{1b} - \sin{\! \left(  \frac{\varphi_{ab}}{2} \right)} |- \rangle_{1b} \! \right) \nonumber\\
+& \qquad \quad \times \left(  \sin{\! \left(  \frac{\varphi_{ab}}{2}  \right)} |+ \rangle_{2b} + \cos{\! \left(  \frac{\varphi_{ab}}{2} \right)} |- \rangle_{2b} \!  \right) 
+ \nonumber \\
+  & \qquad \; - \left( \sin{\! \left(  \frac{\varphi_{ab}}{2}  \right)}  |+ \rangle_{1b} + \cos{\! \left(  \frac{\varphi_{ab}}{2}  \right)} |- \rangle_{1b} \right) \nonumber\\
+ & \qquad \quad \times \!\! \left( \cos{\! \left(  \frac{\varphi_{ab}}{2}  \right)} |+ \rangle_{2b} - \sin{\! \left(  \frac{\varphi_{ab}}{2}  \right)} |- \rangle_{2b}  \right) \! \Big\}.  
  \nonumber
- \end{eqnarray}
+ \end{align}
 Terms with $\sin{\!\left( \varphi_{ab}/{2} \right)} \cos{\!\left( \varphi_{ab}/{2} \right)}$ in this expression cancel; terms with $\cos^2{\!\left( \varphi_{ab}/{2} \right)}$ and $\sin^2{\!\left( \varphi_{ab}/{2} \right)}$ add up to:
 \begin{equation}
 |0, 0 \rangle_{12} = \frac{1}{\sqrt{2}} \Big( |+ \rangle_{1b} |- \rangle_{2b}  - |-  \rangle_{1b} | + \rangle_{2b} \Big), 
@@ -114,8 +114,8 @@ Comparison with the way we wrote the entries of a cell in a non-signaling array 
 
 We can verify directly that $\chi_{ab} = \cos{\varphi_{ab}}$ by evaluating the expectation value $\langle \hat{S}_{1a} \, \hat{S}_{2b} \rangle_{00}$ of the product of the outcomes found by Alice and Bob when they use settings $\hat{a}$ and $\hat{b}$, respectively (cf.\ Eq.\ (\ref{prob 2 exp}); the subscript $00$ indicates that this expectation values is for systems in the singlet state $|0, 0 \rangle_{12}$). Recalling that the taste of a banana is $\pm \bbar/2$ and using the probabilities in the correlation array in Figure \ref{CA-3set2out-non-signaling-halfangles}, we find
 \begin{eqnarray}
-\langle \hat{S}_{1a} \, \hat{S}_{2b} \rangle_{00} & \!\! = \!\! & \frac{\bbar^2}{4} \left(\mathrm{Pr}(+\!+| \hat{a} \,\hat{b}) \, + \, \mathrm{Pr}(-\!-| \hat{a} \,\hat{b})\right) 
-- \frac{\bbar^2}{4} \left(\mathrm{Pr}(+\!-| \hat{a} \,\hat{b}) \, + \, \mathrm{Pr}(-\!+| \hat{a} \,\hat{b})\right) \nonumber \\
+\langle \hat{S}_{1a} \, \hat{S}_{2b} \rangle_{00} & \!\! = \!\! & \frac{\bbar^2}{4} \left(\mathrm{Pr}(+\!+| \hat{a} \,\hat{b}) \, + \, \mathrm{Pr}(-\!-| \hat{a} \,\hat{b})\right) \nonumber\\
+&&- \frac{\bbar^2}{4} \left(\mathrm{Pr}(+\!-| \hat{a} \,\hat{b}) \, + \, \mathrm{Pr}(-\!+| \hat{a} \,\hat{b})\right) \nonumber \\
 &  \!\! = \!\! & \frac{\bbar^2}{4} \left(  \sin^2{\!\left(\frac{\varphi_{ab}}{2}\right)} - \cos^2{\!\left(\frac{\varphi_{ab}}{2}\right)} \right) \; = \; -\frac{\bbar^2}{4}\cos{\varphi_{ab}}.
 \label{prob 2 exp b}
 \end{eqnarray}
@@ -258,7 +258,7 @@ Eq.\ (\ref{QM15}) can thus be rewritten as
 2 \cos{\alpha} \cos{\beta} \cos{\gamma} = \cos^2{\!\alpha} + \cos^2{\!\beta} + \cos^2{\!\gamma} - 1.
 \label{QM17}
 \end{equation}
-Substituting $(\varphi_{ab}, \varphi_{ac}, \varphi_{bc})$ for  $(\alpha, \beta, \gamma)$ and $(\chi_{ab}, \chi_{ac}, \chi_{bc})$ for  $(\cos{\varphi_{ab}}, \cos{\varphi_{ac}}, \cos{\varphi_{bc}})$, 
+Substituting $(\varphi_{ab}, \varphi_{ac}, \varphi_{bc})$ for  $(\alpha, \beta, \gamma)$ and $(\chi_{ab}, \chi_{ac}, \chi_{bc})$ for  $(\cos{\varphi_{ab}}, \break \cos{\varphi_{ac}}, \cos{\varphi_{bc}})$, 
 %(see Eq.\ (\ref{chis2angles2innerproducts})), 
 we see that Eq.\ (\ref{QM17}) reduces to Eq.\ (\ref{QM14}) with an `$=$' sign rather than a `$\ge$' sign. This shows that the equality $\det{\chi} =0$ is indeed equivalent to the statement that the angles $(\varphi_{ab}, \varphi_{ac}, \varphi_{bc})$ either add up to $360\degree$ or that one of them is the sum of the other two. More generally, the \emph{inequality} $\det \chi\geq 0$ is equivalent to the statement that either their sum is no larger than $360\degree$ or the sum of any two of them is no smaller than the third, i.e.,  
 \begin{equation}
