--- a/1910.10688/Section2.tex
+++ b/1910.10688/Section2.tex
@@ -146,9 +146,10 @@ Such variables have zero expectation value, which means that Eq.\ (\ref{cov def 
 \end{equation}
 Bell inequalities (including the CHSH one) are typically expressed in terms of such expectation values. To compute $\langle  X_a^A \, X_b^B \rangle$, we need to assign a numerical value to the taste of a banana. To this end, we introduce the \emph{Bub} or \emph{banana constant} $b$. Yummy ($+$) and nasty ($-$) then correspond to $\pm \bbar/2$, where $\bbar \equiv b/2\pi$ (called \emph{banana split} or \emph{banana bar}). Using the entries in the correlation array in Figure \ref{CA-2set2out-cell}, we evaluate the expectation value of the product of $X_a^A$ and $X_b^B$:
 \begin{eqnarray}
-\left\langle X_a^A \, X_b^B \right\rangle & = & \frac{\bbar^2}{4} \left(\mathrm{Pr}(+\!+| \hat{a} \,\hat{b}) \, + \, \mathrm{Pr}(-\!-| \hat{a} \,\hat{b})\right) 
-- \frac{\bbar^2}{4} \left(\mathrm{Pr}(+\!-| \hat{a} \,\hat{b}) \, + \, \mathrm{Pr}(-\!+| \hat{a} \,\hat{b})\right) \nonumber \\[.2 cm]
-& = & \frac{\bbar^2}{4} \left( \frac12 (1 - \chi_{ab}) - \frac12 (1 + \chi_{ab}) \right) \; = \; -\frac{\bbar^2}{4} \chi_{ab}.
+\bigl\langle X_a^A \, X_b^B \bigr\rangle & = & \frac{\bbar^2}{4} \biggl(\mathrm{Pr}(+\!+| \hat{a} \,\hat{b})
+ \mathrm{Pr}(-\!-| \hat{a} \,\hat{b})\biggr) \nonumber\\
+&& - \frac{\bbar^2}{4} \biggl(\mathrm{Pr}(+\!-| \hat{a} \,\hat{b}) \, + \, \mathrm{Pr}(-\!+| \hat{a} \,\hat{b})\biggr) \nonumber \\
+& =  &\frac{\bbar^2}{4} \biggl( \frac12 (1 - \chi_{ab}) - \frac12 (1 + \chi_{ab}) \biggr) \; = \; -\frac{\bbar^2}{4} \chi_{ab}.
 \label{prob 2 exp}
 \end{eqnarray}
 Introducing the standard deviations of $X_a^A$ and $X_b^B$,
